--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,13 +44,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
-        <activity android:name=".ThingsActivity"
+        <!--<activity android:name=".ThingsActivity"
             android:label="@string/category_things"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
-        </activity>
+        </activity>-->
 
         <activity android:name=".AnimalsActivity"
             android:label="@string/category_animals"
